data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1851.wast
;; 2. **Test Missing Operand for Branch Condition**:    - **Description**: Create a scenario where the stack does not contain any operand for the `br_if` condition.    - **Constraint Checked**: Checks for correct stack height and operand presence for `i32`.    - **Relation to Type Mismatch**: Highlights branch condition type and stack requirements.

(assert_invalid
  (module
    (func $missing-operand-for-branch-condition
      (block
        (br_if 0)
      )
    )
  )
  "type mismatch"
)